<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_task_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_task_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_task_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_task_item_title"
                android:layout_marginTop="8dp"
                android:text="@string/date_and_time"
                android:textColor="@color/md_blue_grey_500"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_task_item_date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_task_item_title"
                android:layout_marginTop="8dp"
                android:text="@string/choose_date"
                android:textColor="@color/md_blue_grey_500"
                android:textSize="15sp"
                android:textStyle="italic" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_done_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/checkbox_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="0dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>