<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context="work.innov8.todoplus.activity.task.ViewTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/base_toolbar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_task_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_8"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/tv_task_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:text="@string/title"
                    android:textSize="@dimen/textsize_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_task_item_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_task_item_title"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@color/activity_background"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingRight="@dimen/margin_8"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/Description"
                    android:textSize="@dimen/textsize_desc"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_task_item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_task_item_desc"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/date_and_time"
                    android:textColor="@color/md_grey_500"
                    android:textSize="@dimen/textsize_date"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_task_item_date_created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_task_item_date"
                    android:layout_marginTop="4dp"
                    android:gravity="right"
                    android:text="@string/choose_date"
                    android:textColor="@color/md_grey_500"
                    android:textSize="@dimen/textsize_date"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_done_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/checkbox_selector_secondary"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_marginTop="@dimen/margin_4"
                    android:focusableInTouchMode="false" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
