<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="work.innov8.todoplus.activity.task.EditTaskActivity">

    <include layout="@layout/base_toolbar" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editTextParentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">


                <work.innov8.todoplus.view.CustomTextInputLayout
                    android:id="@+id/til_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                    <EditText
                        android:id="@+id/ed_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/toolbar_marginLeft"
                        android:layout_marginRight="@dimen/toolbar_marginLeft"
                        android:gravity="start|bottom"
                        android:hint="@string/title"
                        android:inputType="textAutoCorrect|textCapSentences"
                        android:lines="2"
                        android:maxLines="3"
                        android:textColor="@color/icons" />

                </work.innov8.todoplus.view.CustomTextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/activity_background"
                    android:isScrollContainer="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin">

                            <LinearLayout
                                android:id="@+id/todoDescriptionLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/activity_horizontal_margin"
                                    android:orientation="horizontal">

                                    <ImageButton
                                        android:layout_width="@dimen/imageView_w_h"
                                        android:layout_height="@dimen/imageView_w_h"
                                        android:layout_gravity="left"
                                        android:background="@android:color/transparent"
                                        android:padding="@dimen/padding_8"
                                        android:src="@drawable/ic_description_grey_700_24dp" />

                                    <TextView
                                        android:id="@+id/userToDoDescriptionTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:gravity="start|center_vertical"
                                        android:paddingLeft="@dimen/padding_8"
                                        android:paddingRight="@dimen/padding_8"
                                        android:text="@string/Description"
                                        android:textColor="@color/secondary_text"
                                        android:textSize="@dimen/textsize_medium" />


                                </LinearLayout>

                                <android.support.design.widget.TextInputLayout
                                    android:id="@+id/desc_label"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/general_marginTop"
                                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                    android:layout_marginRight="@dimen/activity_horizontal_margin">

                                    <EditText
                                        android:id="@+id/ed_description"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:layout_below="@+id/description_label"
                                        android:hint="@string/add_desc"
                                        android:inputType="textMultiLine|textCapSentences"
                                        android:lines="5"
                                        android:maxLines="20"
                                        android:minLines="1"
                                        android:scrollbars="none" />

                                </android.support.design.widget.TextInputLayout>

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin">

                            <LinearLayout
                                android:id="@+id/todoReminderAndDateContainerLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/activity_horizontal_margin"
                                    android:orientation="horizontal">

                                    <ImageButton
                                        android:id="@+id/userToDoReminderIconImageButton"
                                        android:layout_width="@dimen/imageView_w_h"
                                        android:layout_height="@dimen/imageView_w_h"
                                        android:layout_gravity="left"
                                        android:background="@android:color/transparent"
                                        android:padding="@dimen/padding_8"
                                        android:src="@drawable/ic_alarm_grey_700_24dp" />

                                    <TextView
                                        android:id="@+id/userToDoRemindMeTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:gravity="start|center_vertical"
                                        android:paddingLeft="@dimen/padding_8"
                                        android:paddingRight="@dimen/padding_8"
                                        android:text="@string/date_and_time"
                                        android:textColor="@color/secondary_text"
                                        android:textSize="@dimen/textsize_medium" />

                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/toDoEnterDateLinearLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                                    android:animateLayoutChanges="true"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginBottom="@dimen/general_marginTop">

                                        <android.support.design.widget.TextInputLayout
                                            android:id="@+id/date_label"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_toLeftOf="@+id/button_date"
                                            android:layout_toStartOf="@+id/button_date">

                                            <EditText
                                                android:id="@+id/date"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:layout_below="@+id/description_label"
                                                android:layout_marginRight="@dimen/margin_8"
                                                android:layout_toLeftOf="@+id/button_date"
                                                android:layout_toStartOf="@+id/button_date"
                                                android:clickable="false"
                                                android:cursorVisible="false"
                                                android:focusable="false"
                                                android:focusableInTouchMode="false"
                                                android:hint="@string/date_and_time"
                                                android:inputType="date" />
                                        </android.support.design.widget.TextInputLayout>

                                        <ImageButton
                                            android:id="@+id/button_date"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignBottom="@+id/date_label"
                                            android:layout_toLeftOf="@+id/button_time"
                                            android:layout_toStartOf="@+id/button_time"
                                            android:onClick="showDatePickerDialog"
                                            android:src="@drawable/ic_date_range_grey_700_24dp"
                                            android:text="calendar" />

                                        <ImageButton
                                            android:id="@+id/button_time"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignBottom="@+id/button_date"
                                            android:layout_alignWithParentIfMissing="true"
                                            android:layout_toLeftOf="@+id/button_remove_date"
                                            android:layout_toStartOf="@+id/button_remove_date"
                                            android:onClick="showTimePickerDialog"
                                            android:src="@drawable/ic_alarm_add_grey_700_24dp"
                                            android:text="time" />

                                        <ImageButton
                                            android:id="@+id/button_remove_date"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignBottom="@+id/date_label"
                                            android:layout_alignParentEnd="true"
                                            android:layout_alignWithParentIfMissing="true"
                                            android:layout_centerVertical="true"
                                            android:nestedScrollingEnabled="false"
                                            android:onClick="removeDate"
                                            android:src="@drawable/ic_close_grey_700_24dp"
                                            android:visibility="gone" />


                                    </RelativeLayout>

                                </LinearLayout>


                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>


                </ScrollView>


            </LinearLayout>


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>
